2009-01-13 - Sean Huber (shuber@huberry.com)
  * :marshal no longer defaults to true in ORM adapters
  * Load gem dependencies

2009-01-12 - Sean Huber (shuber@huberry.com)
  * Remove read_attribute and write_attribute methods - unnecessary
  * ActiveRecord and DataMapper extensions are now "adapters"
  * Check for existing reader and writer methods separately before creating default ones for encrypted attributes
  * Typo: should send(encrypted_attribute_name.to_sym) instead of send(encrypted_attribute_name.to_s)
  * Add Sequel adapter
  * Update DataMapper tests
  * Update README
  * Set attr_encrypted_options instead of overwriting the attr_encrypted method in adapters

2009-01-11 - Sean Huber (shuber@huberry.com)
  * Update README

2009-01-10 - Sean Huber (shuber@huberry.com)
  * Update README

2009-01-08 - Sean Huber (shuber@huberry.com)
  * Update comments and documentation
  * Update README
  * Add gemspec
  * Add support for data mapper
  * Attribute methods are now defined before calling attr_encrypted when using active record
  * Add ability to specify your own encoding directives
  * Update logic that evaluates symbol and proc options
  * Add support for :if and :unless options
  * Add AttrEncrypted namespace

2009-01-07 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Add comments/documentation to the active record related logic
  * Add more attr_encrypted tests
  * Update tests and comments