@@ -1,3 +1,6 @@
+2009-01-14 - Sean Huber (shuber@huberry.com)
+  * Move Class logic into Object
+
 2009-01-13 - Sean Huber (shuber@huberry.com)
   * :marshal no longer defaults to true in ORM adapters
   * Load gem dependencies
